# CSharpCXXInterop

./: README.md
cs/: CXXBindings.sln
cs/CXXInterop/: Program.cs
cxx/: CMakeLists.txt
cxx/include/: demolib.h
cxx/src/: demolib.cpp
